--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "packages/paragraph_columns",
+    "name": "handmangroup/paragraph_columns",
     "description": "Creates a wrapper paragraph type for multicolumn paragraphs",
     "type": "drupal-module",
     "authors": [
@@ -8,6 +8,7 @@
             "email": "jill@handmangroup.com"
         }
     ],
+    "minimum-stability": "dev",
     "require": {
         "drupal/color_field": "^3.0",
         "drupal/paragraphs": "^1.15",
