--- a/config/install/core.entity_view_display.paragraph.text.default.yml
+++ b/config/install/core.entity_view_display.paragraph.text.default.yml
@@ -14,7 +14,7 @@ targetEntityType: paragraph
 bundle: text
 mode: default
 content:
-  field_text:
+  field_pcol_text:
     type: text_default
     label: hidden
     settings: {  }
@@ -22,4 +22,4 @@ content:
     weight: 0
     region: content
 hidden:
-  field_background_color_option: true
+  field_pcol_background_color_option: true
