--- a/config/install/field.field.paragraph.text.field_pcol_text.yml
+++ b/config/install/field.field.paragraph.text.field_pcol_text.yml
@@ -2,14 +2,14 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_text
+    - field.storage.paragraph.field_pcol_text
     - paragraphs.paragraphs_type.text
   module:
     - text
 _core:
   default_config_hash: XvhoA_NKcjAjxSh3JUfRAGH27hsmw1p5ZQw-avKLyo4
-id: paragraph.text.field_text
-field_name: field_text
+id: paragraph.text.field_pcol_text
+field_name: field_pcol_text
 entity_type: paragraph
 bundle: text
 label: Text
