--- a/config/install/field.storage.paragraph.field_pcol_add_gutters.yml
+++ b/config/install/field.storage.paragraph.field_pcol_add_gutters.yml
@@ -5,8 +5,8 @@ dependencies:
     - paragraphs
 _core:
   default_config_hash: _5RcJenCrkYAqlVK2OCNpi4XU9dMWmC4SbOGK9Y3qMk
-id: paragraph.field_add_gutters
-field_name: field_add_gutters
+id: paragraph.field_pcol_add_gutters
+field_name: field_pcol_add_gutters
 entity_type: paragraph
 type: boolean
 settings: {  }
