--- a/config/install/field.storage.paragraph.field_pc_text.yml
+++ b/config/install/field.storage.paragraph.field_pc_text.yml
@@ -5,9 +5,9 @@ dependencies:
     - paragraphs
     - text
 _core:
-  default_config_hash: zyMvqM36_0ZBjJ_gPZ6q7Hg0ZdF60km4uyBFRun6zig
-id: paragraph.field_pcol_element_intro_text
-field_name: field_pcol_element_intro_text
+  default_config_hash: 79mD96juMyrOzIMfCsTjG-QNDifeR-F_wJw78DvSEVM
+id: paragraph.field_pc_text
+field_name: field_pc_text
 entity_type: paragraph
 type: text_long
 settings: {  }
