--- a/config/install/core.entity_form_display.paragraph.text.default.yml
+++ b/config/install/core.entity_form_display.paragraph.text.default.yml
@@ -2,8 +2,8 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.text.field_pcol_background_color_option
-    - field.field.paragraph.text.field_pcol_text
+    - field.field.paragraph.text.field_pc_bkgd_color_option
+    - field.field.paragraph.text.field_pc_text
     - paragraphs.paragraphs_type.text
   module:
     - color_field
@@ -15,7 +15,7 @@ targetEntityType: paragraph
 bundle: text
 mode: default
 content:
-  field_pcol_background_color_option:
+  field_pc_bkgd_color_option:
     type: color_field_widget_box
     weight: 1
     region: content
@@ -28,7 +28,7 @@ content:
         #b99aff,#c2c2c2,#cabdbf,#cca6ac,#f691b2
         #cd74e6,#a47ae2
     third_party_settings: {  }
-  field_pcol_text:
+  field_pc_text:
     type: text_textarea
     weight: 0
     region: content
