--- a/config/install/core.entity_view_display.paragraph.columns.default.yml
+++ b/config/install/core.entity_view_display.paragraph.columns.default.yml
@@ -2,16 +2,16 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.columns.field_pcol_add_gutters
-    - field.field.paragraph.columns.field_pcol_background_color_option
-    - field.field.paragraph.columns.field_pcol_btn_background_color
-    - field.field.paragraph.columns.field_pcol_button_link
-    - field.field.paragraph.columns.field_pcol_column_layout
-    - field.field.paragraph.columns.field_pcol_element_intro_text
-    - field.field.paragraph.columns.field_pcol_element_selection
-    - field.field.paragraph.columns.field_pcol_number_of_columns
-    - field.field.paragraph.columns.field_pcol_section_title
-    - field.field.paragraph.columns.field_pcol_width
+    - field.field.paragraph.columns.field_pc_add_gutters
+    - field.field.paragraph.columns.field_pc_bkgd_color_option
+    - field.field.paragraph.columns.field_pc_btn_bkgd_color
+    - field.field.paragraph.columns.field_pc_button_link
+    - field.field.paragraph.columns.field_pc_column_layout
+    - field.field.paragraph.columns.field_pc_element_intro_text
+    - field.field.paragraph.columns.field_pc_element_selection
+    - field.field.paragraph.columns.field_pc_number_of_columns
+    - field.field.paragraph.columns.field_pc_section_title
+    - field.field.paragraph.columns.field_pc_width
     - paragraphs.paragraphs_type.columns
   module:
     - color_field
@@ -25,7 +25,7 @@ targetEntityType: paragraph
 bundle: columns
 mode: default
 content:
-  field_pcol_background_color_option:
+  field_pc_bkgd_color_option:
     type: color_field_formatter_text
     label: hidden
     settings:
@@ -34,7 +34,7 @@ content:
     third_party_settings: {  }
     weight: 4
     region: content
-  field_pcol_btn_background_color:
+  field_pc_btn_bkgd_color:
     type: color_field_formatter_text
     label: hidden
     settings:
@@ -43,7 +43,7 @@ content:
     third_party_settings: {  }
     weight: 5
     region: content
-  field_pcol_button_link:
+  field_pc_button_link:
     type: link
     label: hidden
     settings:
@@ -55,14 +55,14 @@ content:
     third_party_settings: {  }
     weight: 3
     region: content
-  field_pcol_element_intro_text:
+  field_pc_element_intro_text:
     type: text_default
     label: hidden
     settings: {  }
     third_party_settings: {  }
     weight: 1
     region: content
-  field_pcol_element_selection:
+  field_pc_element_selection:
     type: entity_reference_revisions_entity_view
     label: hidden
     settings:
@@ -71,7 +71,7 @@ content:
     third_party_settings: {  }
     weight: 2
     region: content
-  field_pcol_section_title:
+  field_pc_section_title:
     type: string
     label: hidden
     settings:
@@ -80,7 +80,7 @@ content:
     weight: 0
     region: content
 hidden:
-  field_pcol_add_gutters: true
-  field_pcol_column_layout: true
-  field_pcol_number_of_columns: true
-  field_pcol_width: true
+  field_pc_add_gutters: true
+  field_pc_column_layout: true
+  field_pc_number_of_columns: true
+  field_pc_width: true
