--- a/config/install/field.field.paragraph.columns.field_pc_btn_bkgd_color.yml
+++ b/config/install/field.field.paragraph.columns.field_pc_btn_bkgd_color.yml
@@ -2,15 +2,15 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_pcol_btn_background_color
+    - field.storage.paragraph.field_pc_btn_bkgd_color
     - paragraphs.paragraphs_type.columns
   module:
     - color_field
-id: paragraph.columns.field_pcol_btn_background_color
-field_name: field_pcol_btn_background_color
+id: paragraph.columns.field_pc_btn_bkgd_color
+field_name: field_pc_btn_bkgd_color
 entity_type: paragraph
 bundle: columns
-label: 'Button Background Color'
+label: 'Button bkgd Color'
 description: ''
 required: false
 translatable: false
