--- a/config/install/field.storage.paragraph.field_pc_add_gutters.yml
+++ b/config/install/field.storage.paragraph.field_pc_add_gutters.yml
@@ -3,15 +3,14 @@ status: true
 dependencies:
   module:
     - paragraphs
-    - text
 _core:
-  default_config_hash: 79mD96juMyrOzIMfCsTjG-QNDifeR-F_wJw78DvSEVM
-id: paragraph.field_pcol_text
-field_name: field_pcol_text
+  default_config_hash: _5RcJenCrkYAqlVK2OCNpi4XU9dMWmC4SbOGK9Y3qMk
+id: paragraph.field_pc_add_gutters
+field_name: field_pc_add_gutters
 entity_type: paragraph
-type: text_long
+type: boolean
 settings: {  }
-module: text
+module: core
 locked: false
 cardinality: 1
 translatable: true
