--- a/config/install/core.entity_view_display.paragraph.text.default.yml
+++ b/config/install/core.entity_view_display.paragraph.text.default.yml
@@ -2,8 +2,8 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.text.field_pcol_background_color_option
-    - field.field.paragraph.text.field_pcol_text
+    - field.field.paragraph.text.field_bkgd_color_option
+    - field.field.paragraph.text.field_text
     - paragraphs.paragraphs_type.text
   module:
     - text
@@ -22,4 +22,4 @@ content:
     weight: 0
     region: content
 hidden:
-  field_background_color_option: true
+  field_bkgd_color_option: true
