change name to colm-1022

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nubay/colm-1022",
+    "name": "nubay_services/colm_1022",
     "description": "Creates a wrapper paragraph type for multicolumn paragraphs",
     "type": "drupal-module",
     "authors": [
