--- a/config/install/core.entity_form_display.colm.1022.default.yml
+++ b/config/install/core.entity_form_display.colm.1022.default.yml
@@ -3,7 +3,7 @@ status: true
 dependencies:
   config:
     - field.field.colm.1022.field_colm_add_gutters
-    - field.field.colm.1022.field_bkgd_color_option
+    - field.field.colm.1022.field_colm_bkgd_color_option
     - field.field.colm.1022.field_colm_btn_bkgd_color
     - field.field.colm.1022.field_colm_button_link
     - field.field.colm.1022.field_colm_column_layout
@@ -32,7 +32,7 @@ content:
     settings:
       display_label: true
     third_party_settings: {  }
-  field_bkgd_color_option:
+  field_colm_bkgd_color_option:
     type: color_field_widget_box
     weight: 3
     region: content
