--- a/config/install/core.entity_view_display.paragraph.text.default.yml
+++ b/config/install/core.entity_view_display.paragraph.text.default.yml
@@ -2,7 +2,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.text.field_bkgd_color_option
+    - field.field.paragraph.text.field_colm_bkgd_color_option
     - field.field.paragraph.text.field_text
     - paragraphs.paragraphs_type.text
   module:
@@ -22,4 +22,4 @@ content:
     weight: 0
     region: content
 hidden:
-  field_bkgd_color_option: true
+  field_colm_bkgd_color_option: true
