--- a/config/install/field.field.colm.1022.field_colm_bkgd_color_option.yml
+++ b/config/install/field.field.colm.1022.field_colm_bkgd_color_option.yml
@@ -2,12 +2,12 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_bkgd_color_option
+    - field.storage.paragraph.field_colm_bkgd_color_option
     - paragraphs.paragraphs_type.colm-1022
   module:
     - color_field
-id: colm.1022.field_bkgd_color_option
-field_name: field_bkgd_color_option
+id: colm.1022.field_colm_bkgd_color_option
+field_name: field_colm_bkgd_color_option
 entity_type: paragraph
 bundle: columns
 label: 'Background Color Option'
