--- a/config/install/core.entity_form_display.colm.1022.default.yml
+++ b/config/install/core.entity_form_display.colm.1022.default.yml
@@ -33,18 +33,16 @@ content:
       display_label: true
     third_party_settings: {  }
   field_colm_bkgd_color_option:
-    type: color_field_widget_box
+    type: color_field_widget_html5
     weight: 3
     region: content
-    settings:
-      default_colors: '#ac725e,#d06b64,#f83a22,#fa573c,#ff7537,#ffad46,#42d692,#16a765,#7bd148,#b3dc6c,#fbe983,#92e1c0,#9fe1e7,#9fc6e7,#4986e7,#9a9cff,#b99aff,#c2c2c2,#cabdbf,#cca6ac,#f691b2,#cd74e6,#a47ae2'
+    settings: {  }
     third_party_settings: {  }
   field_colm_btn_bkgd_color:
-    type: color_field_widget_box
+    type: color_field_widget_html5
     weight: 10
     region: content
-    settings:
-      default_colors: '#ac725e,#d06b64,#f83a22,#fa573c,#ff7537,#ffad46,#42d692,#16a765,#7bd148,#b3dc6c,#fbe983,#92e1c0,#9fe1e7,#9fc6e7,#4986e7,#9a9cff,#b99aff,#c2c2c2,#cabdbf,#cca6ac,#f691b2,#cd74e6,#a47ae2'
+    settings: {  }
     third_party_settings: {  }
   field_colm_button_link:
     type: link_default
